Badge generation (#11)
* add SpotifyClient missing tests

* add tests for PlaylistController

* add exclusions to code coverage

* fix README.md

* clean readme

* increment test coverage